8257641: Shenandoah: Query is_at_shenandoah_safepoint() from control thread should return false

Reviewed-by: shade