src/hotspot/share/gc/shenandoah/shenandoahHeap.hpp
@@ -115,6 +115,7 @@ class ShenandoahHeap : public CollectedHeap {
   friend class VMStructs;
   friend class ShenandoahGCSession;
   friend class ShenandoahGCStateResetter;
+  friend class ShenandoahSafepoint;
 
 // ---------- Locks that guard important data structures in Heap
 //
